# scout-code

./: .dockerignore  .env.example  .env.prod  .env.production  .gitignore  CLAUDE.md  Dockerfile  FOUNDATION_COMPLETE.md  HANDOVER.md  HANDOVER_PI5_DEPLOYMENT.md  LL-LI.md  Makefile  README.md  REVIEW-GUIDE.md  REVIEW.md  docker-compose.yml  docker_deployment_instructions.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_out.txt
.claude/: settings.local.json
data/: profile.yaml
deploy/: .env.example  README.md  docker-compose.cpu.yml  docker-compose.yml
deploy/benchmark/: Dockerfile  run_benchmark.py
deploy/benchmark/results/: .gitkeep  benchmark_Calegion_20251216_221132.json  benchmark_Calegion_20251216_221609.json  benchmark_calmain_20251217_103417.json  benchmark_calmain_20251218_101925.json  benchmark_calmain_20251218_102600.json  benchmark_calmain_20251218_102705.json
deploy/benchmark/test_jobs/: .gitkeep
deploy/configs/: .gitkeep
deploy/scripts/: pull-models.sh  setup-linux-gpu.sh  setup-rpi.sh  setup-windows.ps1
docs/: CLEANUP_PLAN.md  DOCUMENTATION_CLEANUP.md  QUICKSTART.md  README.md  SPECIFICATIONS.md
docs/architecture/: Raspberry Pi Instructions.md  Scout PoC - Complete Project Structure & Configuration.md
docs/archive/deployment/: Deployment_Execution_Checklist.md  Deployment_PreFlight_Checklist.md  (+1 more)
docs/current_state/: README.md  api_routes.md  database.md  modules.md  services.md  web_interface.md
docs/deployment/: CLAUDE_CODE_START_PROMPT.md  Deployment_PreFlight_Checklist.md  Deployment_PreFlight_Verification.md  HANDOVER_SUMMARY.md  Performance_Benchmarks.md  PreFlight_QuickWins_Status.md  Raspberry_Pi_5_Deployment_Guide.md  User_Guide.md
docs/guides/: API_Diagnostics_Guide.md  CLAUDE.md  Local_LLM_Transition_Guide.md  Scout_Claude_Code_Development_Guide.md  Scout_Implementation_Checklist.md  Scout_PoC_Scope_Document.md
docs/modules/: Module 1 Collector - Claude Code Instructions.md  Module 2 Rinser - Claude Code Instructions.md  Module 3 Analyzer - Claude Code Instructions.md  Module_2_Rinser_-_Claude_Code_Instructions.md  Module_3_Analyzer_-_Claude_Code_Instructions.md  Module_4_Creator_-_Claude_Code_Instructions.md  Module_5_Formatter_-_Claude_Code_Instructions.md  Web_Interface_-_Claude_Code_Instructions.md
docs/services/: S1 LLM Service - Claude Code Instructions.md  S1_LLM_Service_-_Claude_Code_Instructions.md  S2_Cost_Tracker_Service_-_Claude_Code_Instructions.md  S3 Cache Service - Claude Code Instructions.md  S3_Cache_Service_-_Claude_Code_Instructions.md  S4_Vector_Store_Service_-_Claude_Code_Instructions.md  S5_API_Routes_-_Claude_Code_Instructions.md  S6_Pipeline_Orchestrator_-_Claude_Code_Instructions.md  S7 Content Optimizer Service - Claude Code Instructions.md  S8_Notification_Service_-_Claude_Code_Instructions.md
docs/specifications/: profile_poc_spec.md  profile_poc_spec_expand.md
docs/tasks/: README.md  REFACTOR_GUIDE.md  TASK-A-SKILL-ALIASES.md  TASK-API-HARDENING.md  TASK-C-PROFILE-COMPLETENESS.md  TASK-E-PROFILE-EDITOR-UI.md  TASK-PERSISTENCE-UI.md  TASK-REFACTOR-CLEANUP.md  WP1_DATABASE_SCHEMA_MODELS.md  WP2_DATABASE_SERVICE.md  WP3_COLLECTOR_API.md  WP4_WEB_INTERFACE.md
docs/test_data/: TEST_JOB_00_Minimal_Quick_Test.txt  TEST_JOB_01_Software_Developer.txt  TEST_JOB_02_Data_Analyst.txt  TEST_JOB_03_Technical_Project_Manager.txt  my_test_profile.yaml  synthetic_job_postings.md
scripts/: check_ollama.py  deploy.ps1  deploy.sh  verify_imports.py
src/: README.md
src/modules/: README.md
src/services/: README.md
src/templates/: cover_letter.html  cv_modern.html
src/web/: README.md  __init__.py  dependencies.py  log_handler.py  main.py  schemas.py
src/web/routes/: api.py  (+4 more)
tests/: test_analyzer.py  test_cache.py  test_collector.py  test_cost_tracker.py  test_creator.py  test_database_service.py  test_formatter.py  test_llm_service.py  test_metrics_service.py  test_notification.py  test_pages.py  test_pipeline.py  test_profile.py  test_profile_assessment.py  test_rinser.py  test_skill_aliases.py  test_vector_store.py  test_web.py
tests/validation/: README.md  __init__.py  compare.py  runner.py  test_cases.yaml  test_profile.yaml
todo/: README.md  deployment.md  documentation.md  modules.md  services.md  web-interface.md
(+107 files in other folders)
