[project]
name = "scout"
version = "0.1.0"
description = "Intelligent job application automation system with semantic matching and tailored content generation"
authors = [
    {name = "Cal", email = "carstenlydeking@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["job-automation", "ai", "llm", "edge-computing", "bachelor-thesis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Data Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # LLM Integration (Local via Ollama)
    "ollama>=0.4.0",
    # Vector Database & Embeddings
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    # Caching & Database
    "aiosqlite>=0.19.0",
    # HTTP & File Handling
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "httpx>=0.26.0",
    # Template & Document Generation
    "jinja2>=3.1.3",
    "xhtml2pdf>=0.2.11",
    # Data Processing
    "pyyaml>=6.0.1",
    "bleach>=6.1.0",
    # System Monitoring
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    # Code Formatting & Linting
    "black>=23.12.1",
    "ruff>=0.1.11",
    # Type Checking
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.12",
    "types-bleach>=6.1.0",
    # Pre-commit Hooks
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
